@@ -73,8 +73,10 @@ for fname in glob.glob(os.path.join(progdir, r"Microsoft Office\Office*\*.olb"))
         continue
     add_test(fname)
 
-for fname in glob.glob(os.path.join(common_progdir, r"Microsoft Shared\Speech\*.dll")):
-    add_test(fname)
+path = os.path.join(progdir, r"Microsoft Visual Studio .NET 2003\Visual Studio SDKs\DIA SDK\bin\msdia71.dll")
+if os.path.isfile(path):
+    print "ADD", path
+    add_test(path)
 
 
 for fname in glob.glob(os.path.join(sysdir, "*.dll")):
